<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/SolvedContainer"
    android:layout_width="300dp"
    android:layout_height="400dp"
    android:background="@drawable/rounded_edge_background"
    android:clickable="true"
    android:focusable="true"
    android:gravity="center"
    tools:visibility="visible">

    <Button
        android:id="@+id/retryButton"
        android:layout_width="250dp"
        android:layout_height="75dp"
        android:layout_marginTop="12dp"
        android:text="@string/retry"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/puzzleBests" />

    <Button
        android:id="@+id/newButton"
        android:layout_width="250dp"
        android:layout_height="75dp"
        android:text="@string/new_game"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/retryButton" />

    <TextView
        android:id="@+id/puzzleDataView"
        android:layout_width="250dp"
        android:layout_height="120dp"
        android:layout_marginTop="24dp"
        android:background="@color/colorPrimary"
        android:gravity="center"
        android:text="@string/puzzle_solved"
        android:textColor="@android:color/background_light"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/puzzleBests"
        android:layout_width="250dp"
        android:layout_height="75dp"
        android:background="@android:color/background_light"
        android:gravity="center"
        android:text="@string/highscore"
        android:textColor="@color/colorPrimary"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/puzzleDataView" />

</androidx.constraintlayout.widget.ConstraintLayout>