<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/FragmentBackground"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:drawable/screen_background_dark_transparent"
    android:clickable="true"
    android:focusable="true"
    tools:context=".ui.main.PauseFragment"
    tools:visibility="visible">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/PauseMenu"
        android:layout_width="250dp"
        android:layout_height="300dp"
        android:background="@drawable/rounded_edge_background">

        <Button
            android:id="@+id/newPuzzle"
            android:layout_width="150dp"
            android:layout_height="60dp"
            android:layout_marginTop="28dp"
            android:text="@string/new_game"
            android:textAllCaps="false"
            android:textSize="22sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/resumeButton" />

        <Button
            android:id="@+id/resumeButton"
            android:layout_width="150dp"
            android:layout_height="60dp"
            android:layout_marginTop="48dp"
            android:text="@string/resume"
            android:textAllCaps="false"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:gravity="center"
            android:text="@string/resize"
            android:textAllCaps="false"
            android:textColor="@android:color/background_dark"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/newPuzzle" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>