<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.main.PuzzleActivity2">

    <androidx.gridlayout.widget.GridLayout
        android:id="@+id/gridLayout"
        android:layout_width="300dp"
        android:layout_height="300dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:background="@android:color/darker_gray"
        app:layout_constraintBottom_toTopOf="@+id/hintButtonContainer"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bestsView"
        app:layout_constraintVertical_bias="0.567">

    </androidx.gridlayout.widget.GridLayout>

    <TextView
        android:id="@+id/gameTimer"
        android:layout_width="210dp"
        android:layout_height="50dp"
        android:layout_marginEnd="28dp"
        android:layout_marginTop="16dp"
        android:background="@android:color/darker_gray"
        android:text="@string/timer_default"
        android:textAlignment="center"
        android:textColor="@color/colorPrimary"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/bestsView"
        android:layout_width="210dp"
        android:layout_height="50dp"
        android:layout_marginEnd="28dp"
        android:layout_marginTop="8dp"
        android:background="@android:color/darker_gray"
        android:gravity="center"
        android:text="@string/highscore"
        android:textColor="@color/colorPrimary"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/gameTimer" />

    <ImageButton
        android:id="@+id/pauseButton"
        android:layout_width="65dp"
        android:layout_height="65dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:contentDescription="@string/pause"
        app:layout_constraintEnd_toStartOf="@+id/bestsView"
        app:layout_constraintHorizontal_bias="0.536"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/moveCounter"
        app:srcCompat="@android:drawable/ic_media_pause" />

    <TextView
        android:id="@+id/moveCounter"
        android:layout_width="55dp"
        android:layout_height="50dp"
        android:layout_marginEnd="12dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:background="@android:color/darker_gray"
        android:gravity="center"
        android:textColor="@color/colorPrimary"
        android:textSize="24sp"
        app:layout_constraintEnd_toStartOf="@+id/gameTimer"
        app:layout_constraintHorizontal_bias="0.56"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/hintImage"
        android:layout_width="300dp"
        android:layout_height="300dp"
        android:clickable="false"
        android:contentDescription="@string/image_hint"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="@+id/gridLayout"
        app:layout_constraintEnd_toEndOf="@+id/gridLayout"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/gridLayout"
        app:layout_constraintTop_toTopOf="@+id/gridLayout"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@android:color/transparent" />

    <FrameLayout
        android:id="@+id/hintButtonContainer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        app:layout_constraintBottom_toBottomOf="@+id/pauseContainer"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:visibility="visible">

        <ToggleButton
            android:id="@+id/hintButton"
            android:layout_width="200dp"
            android:layout_height="45dp"
            android:layout_marginBottom="16dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:background="@android:color/darker_gray"
            android:clickable="true"
            android:focusable="true"
            android:gravity="center"
            android:textAllCaps="false"
            android:textColor="@android:color/background_dark"
            android:textOff="@string/show_hint"
            android:textOn="@string/hide_hint"
            android:textSize="18sp"
            android:textStyle="bold" />
    </FrameLayout>

    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/pauseContainer"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="horizontal"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:visibility="invisible">

    </androidx.fragment.app.FragmentContainerView>

    <LinearLayout
        android:id="@+id/solvedUIContainer"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/dark_grey_transparent"
        android:gravity="center"
        android:orientation="horizontal"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="@+id/pauseContainer"
        app:layout_constraintEnd_toEndOf="@+id/pauseContainer"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:visibility="invisible"></LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>